# constrained_icp

./: .gitignore  CMakeLists.txt  README.md  constrained-icp.hpp  global.hh  main.cpp
data/: pcd_0.pcd  pcd_1.pcd  pcd_10.pcd  pcd_11.pcd  pcd_12.pcd  pcd_13.pcd  pcd_14.pcd  pcd_15.pcd  pcd_16.pcd  pcd_2.pcd  pcd_3.pcd  pcd_4.pcd  pcd_5.pcd  pcd_6.pcd  pcd_7.pcd  pcd_8.pcd  pcd_9.pcd  poses.txt
py/: constrained_icp.py  main.py
src/: main.cpp
